Fixed/ Layout broke when maximize/ minimize

--- a/bug-tracker/src/App.css
+++ b/bug-tracker/src/App.css
@@ -15,16 +15,49 @@ border-radius: 100px;
 background: #555; 
 }
 
+.content {
+  flex: 1;
+  display: flex;
+  overflow-x: scroll;
+}
+
 .container{
   display: flex;  
-  height: calc( 100vh - 80px);
+  height: 100vh;
 }
 
 .children{
   flex-grow: 1;
-  margin-left: 40px;
-  margin-top: 55px;
+  overflow-y: auto;
 }
+
+nav{
+  display: flex;
+
+  position: static;
+
+  align-items: center;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 80px;
+  background-color: rgb(249,248,246);
+}
+
+.sidebar{
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  border-right: 4px solid rgb(249,248,246);
+  padding-top: 90px;
+}
+
+
+/* 
+.children::-webkit-scrollbar{
+  display: none; 
+}
+*/
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
