--- a/bug-tracker/src/Components/Navbar/Navbar.css
+++ b/bug-tracker/src/Components/Navbar/Navbar.css
@@ -1,18 +1,3 @@
-nav{
-  display: flex;
-
-  position: static;
-  top: 0;
-
-  align-items: center;
-  justify-content: space-between;
-
-  width: 100%;
-  height: 80px;
-  background-color: rgb(249,248,246);
-  
-}
-
 nav a{
   text-decoration: none;
 }
@@ -77,13 +62,7 @@ a {
   margin-right: 30px;
 }
 
-.sidebar{
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  border-right: 4px solid rgb(249,248,246);
-  padding-top: 90px;
-}
+
 
 .sidebar hr{
   width: 100%;
@@ -92,7 +71,7 @@ a {
 }
 
 .sidebar-item{
-  padding-right: 55px;
+  padding-right: 40px;
   padding-left: 5px; 
   height: 35px;
   align-items: center;
